# menapiai-data-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: create_housing_trends_portland_or_single_family_2020_2025.py  plot_all_clean_parquet.py  plot_housing_trends.py  run_ingestion_portland_2020_2024.py  view_parquet.py
src/menapiai_data_pipeline/: __init__.py  cli.py  config.py  constants.py  logging_config.py
src/menapiai_data_pipeline/ingestion/: __init__.py  employment_bls.py  housing_basic.py  housing_redfin.py  jobs_electrician_basic.py
src/menapiai_data_pipeline/shared/: canonical_columns_employment.py  canonical_columns_housing.py  raw_columns_employment_bls.py  raw_columns_housing_redfin.py  regions.py
src/menapiai_data_pipeline/transforms/: employment_bls_to_canonical.py  housing.py  housing_redfin_to_canonical.py  jobs.py
tests/: test_quality.py  test_smoke.py
